--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 h1 {
-  color: #8B9DC3;
+  color: #0D0F13;
 }
 
 body {
@@ -10,7 +10,7 @@ background-color: #e2e2e2;
 }
 
 h2 {
-  color: #8B9DC3;
+  color: #0D0F13;
 }
 
 body {
